<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.AddObjectActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_add_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scroll_view">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/annie_use_your_telescope"
            android:textFontWeight="700"
            android:text="@string/add_object_title_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/add_object_title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/add_object_shape"
        app:layout_constraintVertical_weight="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_add_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_add_footer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/add_object_shape"
        android:padding="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/label_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name_add_object"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/add_object_label_size_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_text_name" />

    <TextView
        android:id="@+id/label_text_watts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_watts_add_object"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/add_object_label_size_text"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_name"/>

    <EditText
        android:id="@+id/edit_watts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_text_watts"/>

    <TextView
        android:id="@+id/label_text_used_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_used_hours_add_object"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/add_object_label_size_text"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_watts"/>

    <EditText
        android:id="@+id/edit_used_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/edit_used_hours_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_text_used_hours"/>

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_edit_shape"
            android:fontFamily="serif-monospace"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/button_save_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/add_object_label_size_text"
            android:textFontWeight="700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_used_hours" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>